VTN-25600: add collection crud action

--- a/node/aiware-crud.html
+++ b/node/aiware-crud.html
@@ -122,7 +122,8 @@
         }
 
         const renderForm = (actionData, key) => {
-            const data = { params: {}, props: {}, ...actionData[key] };
+            actionData[key] = actionData[key] || {params: {}, props: {}};
+            const data = actionData[key];
             setCrudData(key, data);
             const crudNode = crudDataNode();
             crudNode.empty().append(loading('preparing form ...'));
