VTN-26267: fix default node name of aiware objects

--- a/node/aiware-objects.html
+++ b/node/aiware-objects.html
@@ -159,7 +159,7 @@
             icon: "veritone-logo-transparent.png",
             paletteLabel: "aiware-objects",
             label: function () {
-                return this.name || "aiWARE crud";
+                return this.name || "aiware objects";
             },
             oneditprepare: function () {
                 const { object, action } = this;
