--- a/node/v2f-in.html
+++ b/node/v2f-in.html
@@ -34,13 +34,13 @@
          </dl>
      </li>
      -->
-     <li>V2F Media Chunk Message output
+     <li>Media Chunk Engine Message output
          <dl class="message-properties">
              <dt>payload <span class="property-type">json</span></dt>
              <dd>the standard output of the aiWARE engine framework as a message injected into the flow when running as an engine (engine runtime)</dd>
          </dl>
      </li>
-     <li>V2F "Other" output
+     <li>Miscallaneous Engine Output
          <dl class="message-properties">
              <dt>payload <span class="property-type">json</span></dt>
              <dd>Other miscallaneous engine messages may be routed through the workflow. Check if <code>msg.payload.type === "media_chunk"</code> and that the <code>msg.payload.mimeType</code> is also equal to media files you expect to process. See Details for more info. </dd>
