--- a/node/engine-out.html
+++ b/node/engine-out.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  RED.nodes.registerType('V2F Out', {
+  RED.nodes.registerType('engine-out', {
     category: 'aiWARE',
     color: "#b3e5fc",
     defaults: {
@@ -11,21 +11,21 @@
     outputs: 0,
     icon: "veritone-logo-transparent.png",
     align: "right",
-    paletteLabel: "V2F Out",
+    paletteLabel: "engine out",
     label: function () {
-      return this.name || "V2F Out";
+      return this.name || "engine out";
     }
   });
 </script>
 
-<script type="text/x-red" data-template-name="V2F Out">
+<script type="text/x-red" data-template-name="engine-out">
   <div class="form-row">
           <label for="node-input-name"><i class="icon-tag"></i> Name</label>
           <input type="text" id="node-input-name" placeholder="Name">
       </div>
   </script>
 
-<script type="text/x-red" data-help-name="V2F Out">
+<script type="text/x-red" data-help-name="engine-out">
   <p>
     <span style="font-weight:bold;">Experimental:</span> Attempts to process the inbound <code>payload</code> for returning back to the message queue of the aiWARE engine framework
 </p>
