VTN-26769: correct doc for structured data node

--- a/node/structured-data.html
+++ b/node/structured-data.html
@@ -27,7 +27,7 @@
     }
 </style>
 
-<script type="text/x-red" data-help-name="structured data">
+<script type="text/x-red" data-help-name="structured-data">
     <p>This node can perform <code>Create</code>, <code>Read</code>, <code>Update</code>, and <code>Delete</code> operations on structured data records in aiWARE.</p>
 
 <h3>Inputs</h3>
