VTN-26770: correct create tdo doc

--- a/node/create-tdo.html
+++ b/node/create-tdo.html
@@ -78,7 +78,7 @@
         paletteLabel: "create-tdo",
         align: "right",
         label: function () {
-            return this.name || this.tdoName || "create-tdo";
+            return this.name || this.tdoName || "create file";
         },
         oneditprepare: function () {
             var that = this;
@@ -101,7 +101,7 @@
     });
 </script>
 
-<script type="text/x-red" data-help-name="create file">
+<script type="text/x-red" data-help-name="create-tdo">
     <p>Creates a media file that in aiWARE is stored as a <code>TemporalDataObject</code> (also known as TDO) along with a child <code>asset</code> that is a link to the specific media file path. </p>
 
 <h3>Inputs</h3>
