testing folder read function Added the folder option in the dropdown section

--- a/node/aiware-objects.html
+++ b/node/aiware-objects.html
@@ -8,6 +8,7 @@
         <select id="node-input-object" style="width:66%">
             <option value="watchlist">Watchlist</option>
             <option value="collection">Collection</option>
+            <option value="folder">Folder</option>
         </select>
     </div>
     <div class="form-row">
