--- a/node/engine.html
+++ b/node/engine.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="engine-processing">
+<script type="text/x-red" data-template-name="ai-processing">
     <div class="form-row" id="input-targetId">
         <label for="node-input-targetId"><i class="fa fa-hashtag"></i> Target ID</label>
         <input type="text" id="node-input-targetId" placeholder="UUID">
@@ -12,7 +12,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="engine-processing">
+<script type="text/x-red" data-help-name="ai-processing">
     <p>
     Process a file with a cognitive AI engine that is available to your aiWARAE organization without writing a GraphQL statement
 </p>
@@ -46,7 +46,7 @@
 </script>
 
 <style>
-    .engine-processing-task-form {
+    .ai-processing-task-form {
         border: 1px solid #aaa;
         padding: 0 6px;
         margin: 6px 0;
@@ -189,7 +189,7 @@
         }
 
         function newTaskNode(task, index) {
-            var taskNode = $(`<div class="engine-processing-task-form"> <b>Task ${index + 1}</b></div>`);
+            var taskNode = $(`<div class="ai-processing-task-form"> <b>Task ${index + 1}</b></div>`);
             var engineCategoryNode = $('<div></div>');
             var engineNode = $('<div></div>');
             taskNode.append(engineCategoryNode, engineNode);
@@ -217,7 +217,7 @@
             return res;
         }
 
-        RED.nodes.registerType('engine-processing', {
+        RED.nodes.registerType('ai-processing', {
             category: 'aiWARE',
             color: '#b3e5fc',
             defaults: {
@@ -229,10 +229,10 @@
             outputs: 2,
             outputLabels: ["result", "error"],
             icon: "veritone-logo-transparent.png",
-            paletteLabel: "engine-processing",
+            paletteLabel: "ai-processing",
             align: "right",
             label: function () {
-                return this.name || "engine-processing";
+                return this.name || "ai-processing";
             },
             oneditprepare: function () {
                 var tasks = [];
